--- a/schedule/index.html
+++ b/schedule/index.html
@@ -18,11 +18,11 @@
 
     <div class="main">
         <div class="buttons-el">
-            <button class="buttons" id="monday-el">MONDAY</button>
-            <button class="buttons" id="tuesday-el">TUESDAY</button>
-            <button class="buttons" id="wednesday-el">WEDNESDAY</button>
-            <button class="buttons" id="thursday-el">THURSDAY</button>
-            <button class="buttons" id="friday-el">FRIDAY</button>
+            <button id="buttons" class="buttons" id="monday-el">MONDAY</button>
+            <button id="buttons" class="buttons" id="tuesday-el">TUESDAY</button>
+            <button id="buttons" class="buttons" id="wednesday-el">WEDNESDAY</button>
+            <button id="buttons" class="buttons" id="thursday-el">THURSDAY</button>
+            <button id="buttons" class="buttons" id="friday-el">FRIDAY</button>
         </div>
 
         <div id="for-monday">
